--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -599,6 +599,7 @@
     <Content Include="Views\Services\EliminaItem.cshtml" />
     <Content Include="Views\Evento\ReservaOrganizador.cshtml" />
     <Content Include="Views\Ventas\PagarReserva.cshtml" />
+    <Content Include="Views\CuentaUsuario\PagarReserva.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
