--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -611,6 +611,8 @@
       <SubType>Code</SubType>
     </Content>
     <Content Include="Views\CuentaUsuario\ComprarEntradaReservadaA.cshtml" />
+    <Content Include="Views\CuentaUsuario\ReporteAsignacion.cshtml" />
+    <Content Include="Views\CuentaUsuario\ReporteAsistencia.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
