ver Evento , sitios

--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -390,6 +390,15 @@
     <Content Include="Images\destacado1083.jpg" />
     <Content Include="Images\destacado1086.jpg" />
     <Content Include="Images\destacado1087.jpg" />
+    <Content Include="Images\destacado1088.jpg" />
+    <Content Include="Images\destacado1089.jpg" />
+    <Content Include="Images\destacado1090.jpg" />
+    <Content Include="Images\destacado1094.jpg" />
+    <Content Include="Images\destacado1099.jpg" />
+    <Content Include="Images\destacado1100.jpg" />
+    <Content Include="Images\destacado1102.jpg" />
+    <Content Include="Images\destacado1103.jpg" />
+    <Content Include="Images\destacado1108.jpg" />
     <Content Include="Images\destacado2.png" />
     <Content Include="Images\destacadoEvento_10259_I.jpg" />
     <Content Include="Images\destacadopost-11.jpg" />
@@ -402,6 +411,15 @@
     <Content Include="Images\evento1085.jpg" />
     <Content Include="Images\evento1086.jpg" />
     <Content Include="Images\evento1087.jpg" />
+    <Content Include="Images\evento1088.jpg" />
+    <Content Include="Images\evento1089.jpg" />
+    <Content Include="Images\evento1090.jpg" />
+    <Content Include="Images\evento1094.jpg" />
+    <Content Include="Images\evento1099.jpg" />
+    <Content Include="Images\evento1100.jpg" />
+    <Content Include="Images\evento1102.jpg" />
+    <Content Include="Images\evento1103.jpg" />
+    <Content Include="Images\evento1108.jpg" />
     <Content Include="Images\Eventos\imagen1.jpg" />
     <Content Include="Images\Eventos\imagen2.jpg" />
     <Content Include="Images\fiesta.jpg" />
@@ -432,6 +450,15 @@
     <Content Include="Images\sitios1085.jpg" />
     <Content Include="Images\sitios1086.jpg" />
     <Content Include="Images\sitios1087.jpg" />
+    <Content Include="Images\sitios1088.jpg" />
+    <Content Include="Images\sitios1089.jpg" />
+    <Content Include="Images\sitios1090.jpg" />
+    <Content Include="Images\sitios1094.jpg" />
+    <Content Include="Images\sitios1099.jpg" />
+    <Content Include="Images\sitios1100.jpg" />
+    <Content Include="Images\sitios1102.jpg" />
+    <Content Include="Images\sitios1103.jpg" />
+    <Content Include="Images\sitios1108.jpg" />
     <Content Include="Images\teadoro.jpg" />
     <Content Include="Images\teleticket.gif" />
     <Content Include="Images\teleticketmini.gif" />
