--- a/WebApplication4/WebApplication4/packages.config
+++ b/WebApplication4/WebApplication4/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.5" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="FontAwesome" version="4.4.0" targetFramework="net45" />
   <package id="foolproof" version="0.9.4517" targetFramework="net45" />
   <package id="iTextSharp" version="5.5.7" targetFramework="net45" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
