--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrganizadorController.cs" />
     <Compile Include="Controllers\EventoPostergar_CancelarController.cs" />
+    <Compile Include="Controllers\PoliticasController.cs" />
     <Compile Include="Controllers\PromocionController.cs" />
     <Compile Include="Controllers\PruebaController.cs" />
     <Compile Include="Controllers\PuntoVentaController.cs" />
@@ -649,6 +650,7 @@
     <Content Include="Views\Evento\ReporteEvento.cshtml" />
     <Content Include="Views\CuentaUsuario\MisPreferencias.cshtml" />
     <Content Include="Views\Evento\Destacados.cshtml" />
+    <Content Include="Views\Politicas\Politicas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
