--- a/WebApplication4/WebApplication4/Web.config
+++ b/WebApplication4/WebApplication4/Web.config
@@ -23,6 +23,8 @@
     <customErrors mode="On">
       <error statusCode="404" redirect="Error/Index" />
       <error statusCode="403" redirect="Error/Error403" />
+      <error statusCode="500" redirect="Error/Index" />
+      <error statusCode="505" redirect="Error/Index" />
     </customErrors>
   </system.web>
   <system.webServer>
