--- a/WebApplication4/WebApplication4/Web.config
+++ b/WebApplication4/WebApplication4/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=inti.lab.inf.pucp.edu.pe;Initial Catalog=inf245netsoft;Integrated Security=False;User Id=inf245netsoftdba;Password=u28erghp4c6=J0i;MultipleActiveResultSets=True" /><add name="inf245netsoft" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=inti.lab.inf.pucp.edu.pe;initial catalog=inf245netsoft;integrated security=False;user id=inf245netsoftdba;password=&quot;u28erghp4c6=J0i&quot;;multipleactiveresultsets=True;App=EntityFramework'" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=inti.lab.inf.pucp.edu.pe;Initial Catalog=inf245netsoft;Integrated Security=False;User Id=inf245netsoftdba;Password=u28erghp4c6=J0i;MultipleActiveResultSets=True" />
+    <add name="inf245netsoft" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=inti.lab.inf.pucp.edu.pe;initial catalog=inf245netsoft;integrated security=False;user id=inf245netsoftdba;password=&quot;u28erghp4c6=J0i&quot;;multipleactiveresultsets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
