ultimos cambios index

--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -668,6 +668,11 @@
     <Content Include="Views\Ventas\GeneraTicket.cshtml" />
     <Content Include="Views\Ventas\PrintTicket.cshtml" />
     <Content Include="Views\Organizador\Historial.cshtml" />
+    <Content Include="Views\Ventas\Destacados.cshtml" />
+    <Content Include="Views\Home\Destacados.cshtml" />
+    <Content Include="Views\Manage\Destacados.cshtml" />
+    <Content Include="Views\CuentaUsuario\Destacados.cshtml" />
+    <Content Include="Views\Account\Destacados.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
